--- a/VUI/style.css
+++ b/VUI/style.css
@@ -52,7 +52,7 @@ h1
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: url("pic/bild2.jpeg");
+    background: url("bild2.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
